<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/mensaje1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbMaterial"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:popupBackground="#F4FF81"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/cmbDije"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:popupBackground="#F4FF81" />

        <Spinner
            android:id="@+id/cmbTipo"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:popupBackground="#F4FF81" />

        <Spinner
            android:id="@+id/cmbMoneda"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:popupBackground="#F4FF81" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="0.13"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.03"
                android:text="@string/mensaje2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="0.11"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.29"
                android:text="@string/precioUnitario"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblPrecioUnit"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:layout_weight="1.13"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/precioTotal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblPrecioTotal"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:background="#D9DA1F"
                android:backgroundTint="#D9DA1F"
                android:onClick="limpiar"
                android:shadowColor="@android:color/background_dark"
                android:text="@string/limpiar" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:background="#D9DA1F"
                android:onClick="calcular"
                android:text="@string/calcular" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>